plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'net.deanly'
version = '0.0.1'
description = 'Solana Standard Development Kits for Java'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    // SLF4J
    api 'org.slf4j:slf4j-api:2.0.16'

    // Struct Layout
    api project(":struct-layout")
//    api 'net.deanly:struct-layout:0.3.2'

    // Internal Libraries
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.79'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.squareup.moshi:moshi:1.15.2'
    implementation 'com.squareup.moshi:moshi-adapters:1.15.2'

    // Compile Time
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

    // Test
    testRuntimeOnly 'ch.qos.logback:logback-classic:1.4.12'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.javassist:javassist:3.30.2-GA'
    testRuntimeOnly 'ch.qos.logback:logback-classic:1.4.12'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.test {
    useJUnitPlatform()
    jvmArgs += [
            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    ]
}